--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -30,12 +30,12 @@ jobs:
 
         - name: Extract kernel source
           run: |
-                tar -xzvf linux-${{matrix.kernel-version}}.tar.gz
+                tar -xzvf linux-${{matrix.kernel-version}}.tar.gz -C ./linux-${{matrix.kernel-version}}
 
         - name: Make configuration ARCH
           working-directory: ${{ github.workspace }}
           run: |
-                cd linux-${{matrix.version}}-linux-${{matrix.kernel-version}}/ 
+                cd linux-${{matrix.kernel-version}}/ 
                 ls -l
                 make ARCH=arm64 defconfig
 
