--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -35,8 +35,9 @@ jobs:
           working-directory: ${{ github.workspace }}
           run: |
                 cd linux-${{matrix.version}}-linux-${{matrix.kernel-version}}/
-                cp ../config .config
-                make ARCH=arm64 menuconfig
+                make ARCH=arm64 defconfig
+                # cp ../config .config
+                # make ARCH=arm64 menuconfig
 
         - name: Change var configuration
           working-directory: linux-${{matrix.version}}-linux-${{matrix.kernel-version}}
